IntelliSense Updates
* Addressed IntelliSense Warnings